Removed some consoles and formatted the code

--- a/backend/views/Home.ejs
+++ b/backend/views/Home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('./partials/head') %>
-    <title>Add Blog</title>
+    <title>Home</title>
 </head>
 <body>
     <div class="container mt-4">
@@ -14,7 +14,7 @@
             </div>
             <div class="mb-3">
                 <label for="time" class="form-label">Time</label>
-                <input name = "time" type="text" class="form-control" placeholder="Enter the time in the format of HH:MM only. Please dont forget leading/trailing 0s">
+                <input name = "time" type="text" class="form-control" placeholder="Enter the time in the format of HH:MM only. Please dont forget trailing 0s in minutes">
             </div>
             <button type="submit" class="btn btn-primary" onsubmit="">Submit</button>
         </form>
